--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Score Keeper</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="container">
@@ -11,22 +11,20 @@
         <h1>Title Goes Here</h1>
       </header>
       <div>
-        <div class="team team1">
-          <p class="team-name">Team 1 Name</p>
+        <div class="team tomato">
+          <p class="team-name">Team Tomato</p>
           <p class="score"></p>
-          <button class="score-button"> + 1</button>
-          <button class="score-button"> - 1</button>
+          <button class="score-button">+ 1</button>
+          <button class="score-button">- 1</button>
         </div>
-        <div class="team team2">
-          <p class="team-name">Team 2 Name</p>
+        <div class="team plum">
+          <p class="team-name">Team Plum</p>
           <p class="score"></p>
-          <button class="score-button"> + 1</button>
-          <button class="score-button"> - 1</button>
+          <button class="score-button">+ 1</button>
+          <button class="score-button">- 1</button>
         </div>
       </div>
-      <footer>
-
-      </footer>
+      <footer></footer>
     </div>
   </body>
 </html>
