--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="container">
       <header>
-        <h1>Title Goes Here</h1>
+        <h1>Battle Of The Fruits</h1>
       </header>
       <div>
         <div class="team tomato">
